--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,13 @@ body {
     width: 100% !important;
 }
 
+.responsive-image {
+  width: 100%;
+  height: auto;
+  max-width: 100vw; /* Limits the image width to the viewport width */
+  display: block;
+}
+
 .content-section {
     padding: 20px;
     background-color: white;
@@ -200,7 +207,7 @@ body {
 
 
 /* Responsive Menu */
-@media (max-width: 1080px) {
+@media (max-width: 1100px) {
     .menu {
         display: none;
         flex-direction: column;
