--- a/styles.css
+++ b/styles.css
@@ -188,41 +188,65 @@ body {
 
 /* Responsive Menu */
 @media (max-width: 1100px) {
-    .menu {
+        .navbar {
         display: none;
-        flex-direction: column;
         position: absolute;
-        top: 100%; /* Make it appear below the header */
-        left: 0;
-        width: 100%; /* Full width for dropdown */
-        background-color: #E6EBF0; /* Background color for dropdown */
-        padding: 10px 0;
-        z-index: 1000; /* Ensure it stays above other elements */
+        top: 50px; /* Adjust as needed */
+        right: 0;
+        width: 100%;
+        background-color: #333; /* Color for mobile menu */
+        z-index: 9999;
     }
 
-    .navbar.active .menu {
+    .navbar.active {
+        display: block;
+    }
+	
+	.menu {
+        display: block;
+        width: 100%; /* Full width for dropdown */
+        text-align: center;
+        /*flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: #E6EBF0;
+        padding: 10px 0;
+        z-index: 1000;*/
+    }
+
+    .submenu {
+        /*display: none; /* Hide submenus by default */
+        position: static;
+        background-color: #444; /* Submenu background for mobile */
+        width: 100%;
+    }
+
+    .hamburger {
+        display: block;
+         cursor: pointer;
+    }
+
+/*    .navbar.active .menu {
         display: flex;
     }
 
     .menu li {
-        width: 100%; /* Make each item take full width */
+        width: 100%;
     }
 
     .menu li a {
-        padding: 10px 20px; /* Add padding for better touch experience */
+        padding: 10px 20px;
         text-align: left;
         color: #000000;
         display: block;
         font-weight: 600;
     }
 
-    .submenu {
-        display: none; /* Hide submenus by default */
-    }
 
     .menu li:hover > .submenu {
         display: block;
-        position: relative; /* Show the submenu when hovering on a menu item */
+        position: relative;
         left: 0;
         padding-left: 20px;
         background-color: #DDEBF7;
@@ -231,21 +255,17 @@ body {
     .submenu li a {
         padding: 10px;
         display: block;
-    }
+    }*/
 }
 
-    .hamburger {
-        display: block;
-         cursor: pointer;
-    }
 
-.hamburger span {
+/*.hamburger span {
     display: block;
     width: 30px;
     height: 3px;
     margin: 5px auto;
     background-color: #000;
-}
+}*/
 
 .content-section {
     padding: 20px;
