--- a/styles.css
+++ b/styles.css
@@ -259,13 +259,13 @@ body {
 }
 
 
-/*.hamburger span {
+.hamburger span {
     display: block;
     width: 30px;
     height: 3px;
     margin: 5px auto;
     background-color: #000;
-}*/
+}
 
 .content-section {
     padding: 20px;
