--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,15 @@ body {
 
 /* Responsive Menu */
 @media (max-width: 1100px) {
-        .navbar {
+    .hamburger {
+        display: block;
+        position: absolute;
+        top: 15px;
+        right: 20px;
+        z-index: 1000;        
+    }
+
+    .navbar {
         display: none;
         position: absolute;
         top: 50px; /* Adjust as needed */
@@ -200,71 +208,57 @@ body {
 
     .navbar.active {
         display: block;
-    }
+        flex-direction: column; /* Stack items vertically */
+        width: 100%; /* Full width for mobile menu */
+	}
 	
 	.menu {
         display: block;
         width: 100%; /* Full width for dropdown */
         text-align: center;
-        /*flex-direction: column;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        background-color: #E6EBF0;
-        padding: 10px 0;
-        z-index: 1000;*/
+        padding: 0;
     }
 
-    .submenu {
-        /*display: none; /* Hide submenus by default */
-        position: static;
-        background-color: #444; /* Submenu background for mobile */
-        width: 100%;
-    }
-
-    .hamburger {
-        display: block;
-         cursor: pointer;
-    }
-
-/*    .navbar.active .menu {
-        display: flex;
-    }
 
     .menu li {
         width: 100%;
+		position: relative;
     }
 
     .menu li a {
         padding: 10px 20px;
         text-align: left;
-        color: #000000;
-        display: block;
+        color: white;
+        background-color: #444; /* Background color for mobile items */
+		display: block;
         font-weight: 600;
     }
 
+    .submenu {
+        display: none; /* Hide submenus by default */
+        /*position: static;*/
+        background-color: #555; /* Submenu background for mobile */
+        /*width: 100%;*/
+    }
 
-    .menu li:hover > .submenu {
+    /* Show the submenu when the parent item is clicked */
+    .menu li.active > .submenu {
         display: block;
-        position: relative;
-        left: 0;
-        padding-left: 20px;
-        background-color: #DDEBF7;
+        width: 100%;
     }
 
     .submenu li a {
         padding: 10px;
+        background-color: #666;
+    }
+
+    .hamburger span {
         display: block;
-    }*/
-}
-
-
-.hamburger span {
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 5px auto;
-    background-color: #000;
+        width: 30px;
+        height: 3px;
+        margin: 5px auto;
+        background-color: #000;
+	}
 }
 
 .content-section {
@@ -288,5 +282,5 @@ body {
 
 .hmitem {
 	color: #0000bb;
-
+}
 
